Do not hide panel settings when a panel-parented dialog takes focus

This avoids the Alternative Widgets dialog to remain stuck open
when you close edit mode with it open.

BUG:487161